--- a/SicrediTimeline/app/build.gradle
+++ b/SicrediTimeline/app/build.gradle
@@ -39,7 +39,8 @@ repositories {
 }
 
 ext {
-    retrofitVersion = "2.9.0"
+    retrofit_version = "2.9.0"
+    koin_version = "2.1.5"
 }
 
 dependencies {
@@ -57,8 +58,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     //LifeCycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
@@ -71,6 +72,11 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Koin
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     //Test
     testImplementation 'junit:junit:4.12'
