Added unit tests

--- a/SicrediTimeline/app/src/main/AndroidManifest.xml
+++ b/SicrediTimeline/app/src/main/AndroidManifest.xml
@@ -13,17 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ui.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.eventdetail.EventDetailActivity"
             android:label="@string/activity_event_detail_title"
             android:theme="@style/DefaultToolbar" />
-        <activity android:name=".ui.events.EventsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.events.EventsActivity"></activity>
     </application>
 
 </manifest>
