--- a/SicrediTimeline/app/build.gradle
+++ b/SicrediTimeline/app/build.gradle
@@ -26,6 +26,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "SERVER_URL", "\"https://5f5a8f24d44d640016169133.mockapi.io/api/\""
+        }
+        debug {
+            buildConfigField "boolean", "enableDebugLogging", "true"
+            buildConfigField "String", "SERVER_URL", "\"https://5f5a8f24d44d640016169133.mockapi.io/api/\""
         }
     }
 
